fix web session id passing for sse
